--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "restaurant",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "build": "cross-env TAILWIND_MODE=build postcss ./assets/css/tailwind/tailwind.css  -o ./assets/css/build.css --verbose",
     "dev": "cross-env TAILWIND_MODE=watch postcss build ./assets/css/tailwind/tailwind.css -o ./assets/css/build.css -w --verbose",
